# haskell_weasel_program

./: .gitignore  CHANGELOG.md  haskell-weasel-program.cabal
app/: Main.hs
dist-newstyle/cache/: config
src/: Ace.hs  Allo.hs  Sexual.hs  Util.hs  Weasel.hs
