cabal-version:      2.4
name:               haskell-weasel-program
version:            0.1.0.0
synopsis:           The Weasel Program implemented in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Kagan
maintainer:         skagan@nrao.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Ace,
                      Allo,
                      Util

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      random,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-weasel-program
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        random,
        haskell-weasel-program

    hs-source-dirs:   app
    default-language: Haskell2010
